--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,10 @@
-# requirements.txt
-
-# Data Collection
-requests
-beautifulsoup4
-textblob
-
-# Data Storage
-SQLAlchemy
-sqlite3
-
-# Machine Learning
-torch
+python-binance
+websocket-client
+psycopg2
+redis
+flask
+joblib
 pandas
 numpy
 scikit-learn
-
-# Auto Trading
-python-binance
-
-# UI
-streamlit
-
-# Others
-PyYAML
-schedule
-tenacity
+tweepy
